--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600;700&family=Ruthie&display=swap" rel="stylesheet">
     <title>HappyStikers</title>
     <link rel="stylesheet" href="./src/style/style.css">
+    <link rel="stylesheet" href="./src/style/item.css">
+    <link rel="stylesheet" href="./src//style/header.css">
+    <link rel="stylesheet" href="./src//style/menu.css">
+    <link rel="stylesheet" href="./src/style/cart.css">
 </head>
 <body>
+    <section class="header"></section>
+    <section class="menu"></section>
+    <section class="cart"></section>
     <section class="items"></section>
-    
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
