--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="header"></section>
     <section class="menu"></section>
     <section class="cart"></section>
-    <section class="items"></section>
+    <!-- <section class="items"></section> -->
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
