--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <form class="login-box">
             <div class="input-box user">
                 <p>Correo</p>
-                <input type="text" placeholder="Escribe tu nombre de correo" name="email">
+                <input type="email" placeholder="Escribe tu nombre de correo" name="email">
             </div>
             <div class="input-box password">
                 <p>Contraceña</p>
@@ -26,7 +26,7 @@
             </a>
             <button class="login-button">Login</button>
         </form>
-        <a href="" class="create-account">
+        <a href="./sing-up.html" class="create-account">
             Crear una cuenta
         </a>
     </section>
