--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <body>
     <section class="header"></section>
     <section class="menu"></section>
-    <!-- <section class="items"></section> -->
+    <section class="items"></section>
+    <footer>
+        <p>Made with love</p>
+    </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
