fixed error lazy loading in categories and add little changes in style

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <title>Login</title>
 </head>
 <body>
-    <h1 class="hero-title">HappyStikers</h1>
+    <h1 class="hero-title"><a href="./index.html">HappyStikers</a></h1>
     <section class="login">
         <p class="login-title">Login</p>
         <form class="login-box">
