--- a/payment.html
+++ b/payment.html
@@ -9,7 +9,7 @@
     <title>payment</title>
 </head>
 <body>
-    <header class="header">HappyStikers</header>
+    <header class="header"><a href="./index.html">HappyStikers</a></header>
     <div class="details">
         <h2>Detalles de factuación y envio</h2>
         <div class="your-cart"></div>
