--- a/sing-up.html
+++ b/sing-up.html
@@ -10,7 +10,7 @@
     <title>Register</title>
 </head>
 <body>
-    <h1 class="hero-title">HappyStikers</h1>
+    <h1 class="hero-title"><a href="./index.html">HappyStikers</a></h1>
     <section class="sing-up">
         <p class="sing-up-title">Register</p>
         <form class="sing-up-form">
