fix probles of multiple listeners

--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
                 <form class="login-box">
                     <div class="input-box user">
                         <p>Correo</p>
-                        <input type="email" placeholder="Escribe tu correo" name="email">
+                        <input type="email" placeholder="Escribe tu correo" name="email" required="required">
                     </div>
                     <div class="input-box password">
                         <p>Contraceña</p>
-                        <input type="password" placeholder="Escribe tu contraceña" name="password">
+                        <input type="password" placeholder="Escribe tu contraceña" name="password" required="required">
                     </div>
                     <a href="" class="remind-password">
                         ¿Olvidaste tu contraceña?
@@ -39,27 +39,27 @@
                 <form class="sing-up-form">
                     <div class="input-box name">
                         <p>Nombre</p>
-                        <input type="text" placeholder="Escribe tu nombre" name="name">
+                        <input type="text" placeholder="Escribe tu nombre" name="name" required="required">
                     </div>
                     <div class="input-box lastname">
                         <p>Apellido</p>
-                        <input type="text" placeholder="Escribe tu apellido" name="lastname">
+                        <input type="text" placeholder="Escribe tu apellido" name="lastname" required="required">
                     </div>
                     <div class="input-box phone">
                         <p>Telefono</p>
-                        <input type="number" placeholder="Escribe tu telefono" name="phone">
+                        <input type="number" placeholder="Escribe tu telefono" name="phone" required="required">
                     </div>
                     <div class="input-box email">
                         <p>Correo</p>
-                        <input type="email" placeholder="Escribe tu correo" name="email">
+                        <input type="email" placeholder="Escribe tu correo" name="email" required="required">
                     </div>
                     <div class="input-box password">
                         <p>Contraceña</p>
-                        <input type="password" placeholder="Escribe tu contraceña" name="password">
+                        <input type="password" placeholder="Escribe tu contraceña" name="password" required="required">
                     </div>
                     <div class="input-box r-password">
                         <p>Repite tu contraceña</p>
-                        <input type="password" placeholder="repite tu contraceña">
+                        <input type="password" placeholder="repite tu contraceña" required="required">
                     </div>
                     <button class="login-button">Crear cuenta</button>
                 </form>
