fix text and little changes in the style of the login

--- a/login.html
+++ b/login.html
@@ -26,17 +26,17 @@
                         <input type="email" placeholder="Escribe tu correo" name="email" required="required">
                     </div>
                     <div class="input-box password">
-                        <p>Contraceña</p>
-                        <input type="password" placeholder="Escribe tu contraceña" name="password" required="required">
+                        <p>Contraseña</p>
+                        <input type="password" placeholder="Escribe tu contraseña" name="password" required="required">
                     </div>
                     <a href="" class="remind-password">
-                        ¿Olvidaste tu contraceña?
+                        ¿Olvidaste tu contraseña?
                     </a>
                     <button class="login-button">Login</button>
                 </form>
             </section>
             <section class="sign-up">
-                <form class="sing-up-form">
+                <form class="sign-up-form">
                     <div class="input-box name">
                         <p>Nombre</p>
                         <input type="text" placeholder="Escribe tu nombre" name="name" required="required">
@@ -54,12 +54,12 @@
                         <input type="email" placeholder="Escribe tu correo" name="email" required="required">
                     </div>
                     <div class="input-box password">
-                        <p>Contraceña</p>
-                        <input type="password" placeholder="Escribe tu contraceña" name="password" required="required">
+                        <p>Contraseña</p>
+                        <input type="password" placeholder="Escribe tu contraseña" name="password" required="required">
                     </div>
                     <div class="input-box r-password">
-                        <p>Repite tu contraceña</p>
-                        <input type="password" placeholder="repite tu contraceña" required="required">
+                        <p>Repite tu contraseña</p>
+                        <input type="password" placeholder="repite tu contraseña" name="repeat-password" required="required">
                     </div>
                     <button class="login-button">Crear cuenta</button>
                 </form>
