add remember.html and recovery.html

--- a/login.html
+++ b/login.html
@@ -29,10 +29,10 @@
                         <p>Contraseña</p>
                         <input type="password" placeholder="Escribe tu contraseña" name="password" required="required">
                     </div>
-                    <a href="" class="remind-password">
+                    <a href="#" class="remind-password">
                         ¿Olvidaste tu contraseña?
                     </a>
-                    <button class="login-button">Login</button>
+                    <button class="form-button">Login</button>
                 </form>
             </section>
             <section class="sign-up">
@@ -61,7 +61,7 @@
                         <p>Repite tu contraseña</p>
                         <input type="password" placeholder="repite tu contraseña" name="repeat-password" required="required">
                     </div>
-                    <button class="login-button">Crear cuenta</button>
+                    <button class="form-button">Crear cuenta</button>
                 </form>
             </section>
         </div>
