new menu template

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 </head>
 <body>
     <section class="header"></section>
-    <section class="menu"></section>
+    <section class="menu">
+        
+    </section>
     <section class="items"></section>
     <footer>
         <p>Made with love</p>
