fix search for name in menu

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                         <p>Contraseña</p>
                         <input type="password" placeholder="Escribe tu contraseña" name="password" required="required">
                     </div>
-                    <a href="#" class="remind-password">
+                    <a href="./recovery.html" class="remind-password">
                         ¿Olvidaste tu contraseña?
                     </a>
                     <button class="form-button">Login</button>
