fix HappyStickers title

--- a/change-password.html
+++ b/change-password.html
@@ -12,7 +12,7 @@
     <title>Change password</title>
 </head>
 <body>
-    <h1 class="hero-title"><a href="./index.html">HappyStikers</a></h1>
+    <h1 class="hero-title"><a href="./index.html">HappyStickers</a></h1>
     <section class="change-password-container">
         <h3>Cambiar contraseña</h3>
         <form class="change-password"action="">
