--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600;700&family=Ruthie&display=swap" rel="stylesheet">
-    <title>HappyStikers</title>
+    <title>HappyStickers</title>
     <link rel="stylesheet" href="./src/style/style.css">
     <link rel="stylesheet" href="./src/style/item.css">
     <link rel="stylesheet" href="./src//style/header.css">
