--- a/my-account.html
+++ b/my-account.html
@@ -17,7 +17,7 @@
     }
 </script>
 <body>
-    <header class="header"><a href="./index.html"><h1>HappyStikers</h1></a></header>
+    <header class="header"><a href="./index.html"><h1>HappyStickers</h1></a></header>
     <h2 class="section-title">Mis pedidos:</h2>
     <section class="my-orders">
         <div class="order">
