--- a/payment.html
+++ b/payment.html
@@ -20,7 +20,7 @@
     }
 </script>
 <body>
-    <header class="header"><a href="./index.html"><h1>HappyStikers</h1></a></header>
+    <header class="header"><a href="./index.html"><h1>HappyStickers</h1></a></header>
     <div class="details">
         <h2>Detalles de factuación y envio</h2>
         <div class="your-cart"></div>
