--- a/recovery.html
+++ b/recovery.html
@@ -18,7 +18,7 @@
 </script>
 <body>
     <header>
-        <h1 class="hero-title"><a href="./index.html">HappyStikers</a></h1>
+        <h1 class="hero-title"><a href="./index.html">HappyStickers</a></h1>
     </header>
     <section class="remember-my-password-container">
         <h3>Recuperar contraseña</h3>
