--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 </script>
 <body>
     <header>
-        <h1 class="hero-title"><a href="./index.html">HappyStikers</a></h1>
+        <h1 class="hero-title"><a href="./index.html">HappyStickers</a></h1>
     </header>
     <section class="login-and-sign-up">
         <div class="activator-buttons-container">
