--- a/change-password.html
+++ b/change-password.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./src/style/change-password.css">
     <title>Change password</title>
 </head>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <body>
     <h1 class="hero-title"><a href="./index.html">HappyStickers</a></h1>
     <section class="change-password-container">
@@ -29,4 +30,9 @@
     </section>
 </body>
 <script src="./src/components/change-password.mjs" type="module"></script>
+<style>
+    .swal2-popup {
+        font-size: 1.8rem;
+    }
+</style>
 </html>
