--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600;700&family=Ruthie&display=swap" rel="stylesheet">
     <title>Login</title>
 </head>
+
 <script>
     if (document.cookie.length > 10 || document.cookie) {
         window.location.href = "./index.html" 
@@ -76,5 +77,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
     <script src="./src/components/login.mjs" type="module"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
+<style>
+    .swal2-popup {
+        font-size: 1.8rem;
+    }
+</style>
 </html>
