--- a/payment.html
+++ b/payment.html
@@ -19,6 +19,7 @@
         window.location.href = "./index.html"
     }
 </script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <body>
     <header class="header"><a href="./index.html"><h1>HappyStickers</h1></a></header>
     <div class="details">
@@ -62,4 +63,10 @@
     </div>
 </body>
 <script src="./src/components/payment.mjs" type="module"></script>
+
+<style>
+    .swal2-popup {
+        font-size: 1.8rem;
+    }
+</style>
 </html>
