--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./src//style/menu.css">
     <link rel="stylesheet" href="./src/style/cart.css">
 </head>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <body>
     <section class="header"></section>
     <section class="menu">
@@ -27,4 +28,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
 <script src="./src/index.js" type="module"></script>
+<style>
+    .swal2-popup {
+        font-size: 1.8rem;
+    }
+</style>
 </html>
