--- a/recovery.html
+++ b/recovery.html
@@ -16,6 +16,7 @@
         window.location.href = "./index.html" 
     }
 </script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <body>
     <header>
         <h1 class="hero-title"><a href="./index.html">HappyStickers</a></h1>
@@ -33,4 +34,9 @@
     </section>
 </body>
 <script src="./src/components/recovery.mjs" type="module"></script>
+<style>
+    .swal2-popup {
+        font-size: 1.8rem;
+    }
+</style>
 </html>
