💄 delete size of img, new img in the DB

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <body>
-    <section class="header"></section>
+    <header class="header"></header>
     <section class="menu">
         
     </section>
