--- a/payment.html
+++ b/payment.html
@@ -36,7 +36,7 @@
             </div>
             <div>
                 <p>Correo</p>
-                <input type="number" name="email">
+                <input type="email" name="email">
             </div>
             <div>
                 <p>Pais</p>
