--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     <section class="items"></section>
     <footer>
         <p>Made with love</p>
+        <button class="dont-touch">Don't touch</button>
+        <figure class="dont-touch-img">
+            <img src="https://res.cloudinary.com/max-wolts/image/upload/c_scale,w_284/v1639963244/don_t_touch_ijo9rb.jpg" alt="boo">
+            <p>
+                ¿Que haces aqui? Pues ya que estas... si quieres puedes seguirme en <a href="https://twitter.com/max_wolts" target="_blank">Twitter</a> ¿Por qué? En algún momento puedo hacer algo sorprendente y a lo mejor no vas a querer perdértelo.
+            
+            </p>
+        </figure>
     </footer>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
