:pencil2: little fix in footer

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <figure class="dont-touch-img">
             <img src="https://res.cloudinary.com/max-wolts/image/upload/c_scale,w_284/v1639963244/don_t_touch_ijo9rb.jpg" alt="boo">
             <p>
-                ¿Que haces aqui? Pues ya que estas... si quieres puedes seguirme en <a href="https://twitter.com/max_wolts" target="_blank">Twitter</a> ¿Por qué? En algún momento puedo hacer algo sorprendente y a lo mejor no vas a querer perdértelo.
+                ¿Qué haces aquí? Pues ya que estas... si quieres puedes seguirme en <a href="https://twitter.com/max_wolts" target="_blank">Twitter</a> ¿Por qué? En algún momento puedo hacer algo sorprendente y a lo mejor no vas a querer perdértelo.
             
             </p>
         </figure>
