:sparkles: add banner and a temporal loading text

--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
     <link rel="stylesheet" href="./src//style/header.css">
     <link rel="stylesheet" href="./src//style/menu.css">
     <link rel="stylesheet" href="./src/style/cart.css">
+    <link rel="stylesheet" href="./src/style/banner.css">
 </head>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <body>
     <header class="header"></header>
+    <div class="banner">
+        <p class="banner__text">¡Encuentra El hogar ideal para tu sticker!</p>
+        <img class="banner__img" src="./src/assets/banner.jpg" alt="" class="banner">
+    </div>
     <section class="menu">
         
     </section>
-    <section class="items"></section>
+    <section class="items"><p class="items-loading">Cargando...</p></section>
     <footer>
         <p>Made with love</p>
         <button class="dont-touch">Don't touch</button>
